@@ -18,7 +18,13 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2004-09-28  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/divrem_2.asm: New file.
+
 2004-09-20  Torbjorn Granlund  <tege@swox.com>
+
+	* tests/misc.c (tests_rand_start): Default to strtoul for re-seeding.
 
 	* tests/mpz/t-mul.c (ref_mpn_mul): Fudge tmp allocation for toom3.
 
@@ -66,7 +72,7 @@ MA 02111-1307, USA.
 	* mpn/ia64/lorrshift.asm: Insert stops after several branches.
 	* mpn/ia64/aorslsh1_n.asm: Likewise.
 	* mpn/ia64/rsh1aors_n.asm: Likewise.
-	
+
 	* mpn/generic/sqr_basecase.c: In variant for HAVE_NATIVE_mpn_addmul_2,
 	accumulate carry also for when HAVE_NATIVE_mpn_addlsh1_n.
 
